new projects added

--- a/index.html
+++ b/index.html
@@ -366,6 +366,24 @@
                         <img src="./images/covidstatistics.PNG" alt="covid-19-statistics">
                     </div>
                     <div class="project1">
+                        <div class="projectdescription" id="covid-cases-prediction">
+                            <h3><a href="#covid-cases-prediction">Covid-19 Cases Prediction and Forecasting : Machine Learning Project</a></h3>
+                            <p>This website id created using Python and Flask ,This is an Machine Learning based project. in this many machine learning models are implemented and covid cased are forecasted for next 7 days as a result.</p>
+                        </div>
+                        <img src="./images/covid-cases-prediction.PNG" alt="covid-cases-prediction">
+                    </div>
+                </div>
+                <div class="twoprojects">
+                    <div class="project2">
+                        <div class="projectdescription">
+                            <h3><a href="https://socio-social.herokuapp.com/">Socio-Social</a></h3>
+                            <p>This website is created using MongoDB as database, NodeJS and Express as backend and routing, React as frontend and GraphQL as API query.
+                                This Project is demonstration of working of MERNG application
+                                Here we can Write, Like, Share and Posts our Thoughts any time.</p>
+                        </div>
+                        <img src="./images/socio-social.PNG" alt="socio-social">
+                    </div>
+                    <div class="project1">
                         <div class="projectdescription">
                             <h3><a href="https://techforeverybody.github.io/note-app">Note-App</a></h3>
                             <p>This website id created using React.js .</p>
