Internship is added

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <h2>1. Current Position</h2>
             <p>I am a Computer Science Engineer.</p>
 
-            <p>I am Currently studying in Third Year</p>
+            <p>Currently studying in Third Year</p>
 
-            <p> have mainly worked in Web development Field and Machine Learning Field.</p>
+            <p>I have mainly worked in Web development Field and Machine Learning Field.</p>
 
             <p>In web development i have created an E-Commerce Website Using M.E.R.N. Stack Technology, an Discussion
                 Forum website using PHP and MySQL technology, an statistical website on Covid-19 with Vaccine Finder and
@@ -72,7 +72,7 @@
             <p> I have also worked with Java and Python languages for GUI building and C programming for algorithm
                 building.</p>
 
-            <p>i am working with web development and python from nearly 2 Years including learning phase.
+            <p>i am working with web development and Software Development nearly 2 Years including learning phase.
             </p>
             <div class="thingscounts">
                 <div class="count">
@@ -91,12 +91,31 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/2038/2038497.png" alt="">
                     <h3>Specialization</h3>
                 </div>
-
+                <div class="count">
+                    <h1>1</h1>
+                    <img src="https://www.clipartmax.com/png/full/433-4333029_image-internship-icon-black.png" alt="">
+                    <h3>Internship</h3>
+                </div>
             </div>
-            <h2>Experience</h2>
+            <h2>2. Experience</h2>
             <p>I have worked with many technologies for web development and other Software development</p>
-            <h3>But i haven't Done any internship in any company yet but, I am ready to work with Real world Tech
-                Companies </h3>
+            <div class="internshipContainer">
+            <h3>1. Internship</h3>
+            <div class="internship">
+                <h3>Company : Skelly Entertainment</h3>
+                <h3>Position : Web Developer</h3>
+                <h3>Duration : 30 Days</h3>
+                <h3>
+                    Responsiblities : 
+                    <ul>
+                        <li>Front-End Development</li>
+                        <li>Back-End Development</li>
+                        <li>Database Handling</li>
+                    </ul>
+                </h3>
+            </div>
+                </div>
+            <!-- <h3>But i haven't Done any internship in any company yet but, I am ready to work with Real world TechCompanies </h3> -->
             <h2></h2>
         </div>
         <hr>
@@ -233,6 +252,28 @@
                         <div class="metervalue">
                             <meter id="disk_d" value="0.75">75%</meter>
                             75%
+                        </div>
+                    </div>
+                </div>
+                <div class="twometercontent">
+                    <div class="meterdetails">
+                        <div class="metername">
+                            <i class="devicon-typescript-plain colored"> TypeScript</i>
+                            <span>less than 1 Year Experience</span>
+                        </div>
+                        <div class="metervalue">
+                            <meter id="disk_d" value="0.55">55%</meter>
+                            55%
+                        </div>
+                    </div>
+                    <div class="meterdetails">
+                        <div class="metername">
+                            <i class="devicon-graphql-plain colored"> GraphQL</i>
+                            <span>less than 1 Year Experience</span>
+                        </div>
+                        <div class="metervalue">
+                            <meter id="disk_d" value="0.65">65%</meter>
+                            65%
                         </div>
                     </div>
                 </div>
