--- a/index.html
+++ b/index.html
@@ -100,19 +100,20 @@
             <h2>2. Experience</h2>
             <p>I have worked with many technologies for web development and other Software development</p>
             <div class="internshipContainer">
-            <h3>1. Internship</h3>
-            <div class="internship">
-                <h3>Company : Skelly Entertainment</h3>
-                <h3>Position : Web Developer</h3>
-                <h3>Duration : 30 Days</h3>
-                <h3>
-                    Responsiblities : 
-                    <ul>
-                        <li>Front-End Development</li>
-                        <li>Back-End Development</li>
-                        <li>Database Handling</li>
-                    </ul>
-                </h3>
+                <h3>1. Internship</h3>
+                <div class="internship">
+                    <h3>Company : Skelly Entertainment</h3>
+                    <h3>Position : Web Developer</h3>
+                    <h3>Duration : 30 Days</h3>
+                    <h3>
+                        Responsiblities :
+                        <ul>
+                            <li>Front-End Development</li>
+                            <li>Back-End Development</li>
+                            <li>Database Handling</li>
+                        </ul>
+                    </h3>
+                </div>
             </div>
         </div>
         <hr>
@@ -349,8 +350,11 @@
                     </div>
                     <div class="project1">
                         <div class="projectdescription" id="covid-cases-prediction">
-                            <h3><a href="#covid-cases-prediction">Covid-19 Cases Prediction and Forecasting : Machine Learning Project</a></h3>
-                            <p>This website id created using Python and Flask ,This is an Machine Learning based project. in this many machine learning models are implemented and covid cased are forecasted for next 7 days as a result.</p>
+                            <h3><a href="#covid-cases-prediction">Covid-19 Cases Prediction and Forecasting : Machine
+                                    Learning Project</a></h3>
+                            <p>This website id created using Python and Flask ,This is an Machine Learning based
+                                project. in this many machine learning models are implemented and covid cased are
+                                forecasted for next 7 days as a result.</p>
                         </div>
                         <img src="./images/covid-cases-prediction.PNG" alt="covid-cases-prediction">
                     </div>
@@ -359,7 +363,8 @@
                     <div class="project2">
                         <div class="projectdescription">
                             <h3><a href="https://socio-social.herokuapp.com/">Socio-Social</a></h3>
-                            <p>This website is created using MongoDB as database, NodeJS and Express as backend and routing, React as frontend and GraphQL as API query.
+                            <p>This website is created using MongoDB as database, NodeJS and Express as backend and
+                                routing, React as frontend and GraphQL as API query.
                                 This Project is demonstration of working of MERNG application
                                 Here we can Write, Like, Share and Posts our Thoughts any time.</p>
                         </div>
@@ -387,7 +392,9 @@
                             Navi Mumbai, Maharashtra, India
                         </div>
                     </div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241412.4989138671!2d72.89307664225484!3d19.016623851678517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b9f0b81f13ad%3A0x3c12f7681185f869!2sNavi%20Mumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1639338428564!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241412.4989138671!2d72.89307664225484!3d19.016623851678517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b9f0b81f13ad%3A0x3c12f7681185f869!2sNavi%20Mumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1639338428564!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="contactdetail">
                     <h1>Social Profile Links</h1>
