new projects are added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <img src="./images/profile image.jpg" alt="">
             <h3>SHIVKUMAR CHAUHAN</h3>
             <div class="contactlinks">
-                <a href="https://www.linkedin.com/in/shivkumar-chauhan/"><i class="fab fa-linkedin"></i></a><i
-                    class="far fa-envelope inactive"></i><i class="fab fa-skype inactive"></i>
+                <a href="https://www.linkedin.com/in/shivkumar-chauhan/"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:test.mail.shivkumar@gmail.com"><i class="far fa-envelope"></i></a>
+                <i class="fab fa-skype inactive"></i>
             </div>
         </div>
         <hr>
@@ -376,6 +377,24 @@
                             <p>This website id created using React.js .</p>
                         </div>
                         <img src="./images/noteapp.PNG" alt="note-app">
+                    </div>
+                </div>
+                <div class="twoprojects">
+                    <div class="project2">
+                        <div class="projectdescription" id="skin-disease-detection">
+                            <h3><a href="#skin-disease-detection">Skin Disease Classification using Deep Learning</a></h3>
+                            <p>This Project is created based on Deep Learning concepts using CNN.
+                                Mainly, it uses the TensorFlow. Data collection and Defining of CNN architecture is done from scratch without using any predefine architecture from python library.
+                                .</p>
+                        </div>
+                        <img src="./images/skin-disease-detection.PNG" alt="skin-disease-detection">
+                    </div>
+                    <div class="project1">
+                        <div class="projectdescription">
+                            <h3><a href="https://filepointer.000webhostapp.com/">File Uploading Portal - File Pointer</a></h3>
+                            <p>It is a File Uploading portal for Admins of File Pointer Only. This Project is created by PHP and MySQL as a backend and HTML, CSS, JavaScript and Bootstrap are used for frontend.</p>
+                        </div>
+                        <img src="./images/file-pointer.PNG" alt="file-pointer">
                     </div>
                 </div>
             </div>
