new projects are added

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <div class="twoprojects">
                     <div class="project2">
                         <div class="projectdescription" id="skin-disease-detection">
-                            <h3><a href="#skin-disease-detection">Skin Disease Classification using Deep Learning</a></h3>
+                            <h3><a href="#skin-disease-detection">Skin Disease Classification : Deep Learning Project</a></h3>
                             <p>This Project is created based on Deep Learning concepts using CNN.
                                 Mainly, it uses the TensorFlow. Data collection and Defining of CNN architecture is done from scratch without using any predefine architecture from python library.
                                 .</p>
